--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional IT Consulting & AI Solutions - Fraction of the Cost</title>
-    <meta name="keywords" content="IT consulting, AI solutions, cloud services, cybersecurity, affordable IT">
-    <meta name="description" content="Expert IT consulting, AI implementation, cloud & cybersecurity solutions at a fraction of typical costs.">
+    <title>Microsoft 365 & Azure Expert – IT Consulting & AI Seminars</title>
+    <meta name="keywords" content="Microsoft 365, SharePoint, Power Automate, Outlook, Azure, SQL Server, server setup, AI seminars, Microsoft Copilot">
+    <meta name="description" content="Specialized IT consulting in Microsoft 365 (Outlook, SharePoint, Power Automate), Azure cloud, SQL Server, server infrastructure, and practical AI workshops & seminars.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -27,24 +27,11 @@
     <link href="css/style.css" rel="stylesheet">
 
     <style>
-        .carousel-item img {
-            height: 85vh;
-            min-height: 600px;
-            object-fit: cover;
-        }
-        .carousel-caption {
-            background: rgba(0,0,0,0.45);
-            border-radius: 12px;
-            padding: 2.5rem 2rem;
-            max-width: 900px;
-        }
-        .carousel-caption h1 {
-            font-weight: 800;
-            line-height: 1.1;
-        }
-        .letter-spacing-2 {
-            letter-spacing: 3px;
-        }
+        .carousel-item img { height: 85vh; min-height: 600px; object-fit: cover; }
+        .carousel-caption { background: rgba(0,0,0,0.45); border-radius: 12px; padding: 2.5rem 2rem; max-width: 900px; }
+        .carousel-caption h1 { font-weight: 800; line-height: 1.1; }
+        .letter-spacing-2 { letter-spacing: 3px; }
+        .feature-icon { width: 70px; height: 70px; font-size: 1.8rem; }
         @media (max-width: 992px) {
             .carousel-caption h1 { font-size: 2.8rem !important; }
             .carousel-caption h5 { font-size: 1.25rem !important; }
@@ -70,7 +57,7 @@
             <div class="col-md-6 text-center text-lg-end">
                 <div class="position-relative d-inline-flex align-items-center bg-primary text-white top-shape px-5">
                     <div class="me-3 pe-3 border-end py-2">
-                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@youritconsulting.com</p>
+                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@yourm365expert.com</p>
                     </div>
                     <div class="py-2">
                         <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+1 (555) 123-4567</p>
@@ -83,7 +70,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="fas fa-robot me-2"></i>AIConsult</h1>
+            <h1 class="m-0 text-uppercase text-primary"><i class="fab fa-microsoft me-2"></i>M365Expert</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -98,42 +85,40 @@
         </div>
     </nav>
 
-    <!-- Carousel - Clean & Modern Version -->
+    <!-- Carousel (unchanged from your previous clean version) -->
     <div class="container-fluid p-0 mb-5 position-relative">
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <!-- Slide 1 -->
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Professional IT team working with AI">
+                    <img class="w-100" src="img/carousel-1.jpg" alt="Microsoft 365 modern workplace">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="text-center">
                             <h5 class="text-white text-uppercase mb-3 fw-bold letter-spacing-2 animated slideInDown">
-                                IT & AI Consulting
+                                Microsoft 365 & Azure Expert
                             </h5>
-                            <h1 class="display-3 display-md-2 text-white fw-bold mb-4 animated slideInDown">
-                                Expert Solutions<br>at a Fraction of the Cost
+                            <h1 class="display-3 text-white fw-bold mb-4 animated slideInDown">
+                                Get More From Your Microsoft Tools
                             </h1>
                             <div class="mt-4 animated slideInUp">
-                                <a href="#" class="btn btn-primary btn-lg px-5 py-3 me-3 rounded-pill shadow">Get Quote</a>
+                                <a href="#" class="btn btn-primary btn-lg px-5 py-3 me-3 rounded-pill shadow">Get Started</a>
                                 <a href="#" class="btn btn-outline-light btn-lg px-5 py-3 rounded-pill">Contact Us</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Slide 2 -->
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Team discussing technical solutions">
+                    <img class="w-100" src="img/carousel-2.jpg" alt="Azure and Power Automate solutions">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="text-center">
                             <h5 class="text-white text-uppercase mb-3 fw-bold letter-spacing-2 animated slideInDown">
-                                Professional IT Support
+                                Practical IT & AI Guidance
                             </h5>
-                            <h1 class="display-3 display-md-2 text-white fw-bold mb-4 animated slideInDown">
-                                Answers to All Your<br>Technical Questions
+                            <h1 class="display-3 text-white fw-bold mb-4 animated slideInDown">
+                                From Setup to AI-Powered Workflows
                             </h1>
                             <div class="mt-4 animated slideInUp">
-                                <a href="#" class="btn btn-primary btn-lg px-5 py-3 me-3 rounded-pill shadow">Get Started</a>
+                                <a href="#" class="btn btn-primary btn-lg px-5 py-3 me-3 rounded-pill shadow">Free Consultation</a>
                                 <a href="#" class="btn btn-outline-light btn-lg px-5 py-3 rounded-pill">Learn More</a>
                             </div>
                         </div>
@@ -152,43 +137,66 @@
         </div>
     </div>
 
-    <!-- About Section (kept from your previous version) -->
-    <div class="container-fluid bg-secondary py-6 px-5">
-        <div class="row g-5 align-items-center">
-            <div class="col-lg-6">
-                <h1 class="display-5 mb-4">Welcome to <span class="text-primary">AIConsult</span></h1>
-                <h4 class="text-primary mb-4">Professional IT & AI Services – Exceptional Quality at a Fraction of the Cost</h4>
-                <p class="mb-4">We deliver enterprise-grade IT consulting, artificial intelligence solutions, cloud architecture, cybersecurity, and custom software — all at significantly lower costs than traditional firms.</p>
-                <p class="mb-5">From AI implementation to infrastructure modernization and digital protection — we help businesses succeed with reliable, cost-effective technology expertise.</p>
-                <a href="#" class="btn btn-primary py-3 px-5 rounded-pill">Get Your Free Consultation</a>
-            </div>
-            <div class="col-lg-6">
-                <div class="h-100 bg-primary p-5">
-                    <div class="d-flex text-white mb-5">
-                        <div class="flex-shrink-0 d-flex align-items-center justify-content-center bg-white text-primary rounded-circle" style="width: 60px; height: 60px;">
-                            <i class="fas fa-brain fs-4"></i>
-                        </div>
-                        <div class="ps-4">
-                            <h3>AI & Machine Learning</h3>
-                            <p class="mb-0">Custom models, automation & intelligent process optimization</p>
+    <!-- Updated About / Welcome Section – Now vertical layout + your real expertise -->
+    <div class="container-fluid py-6 px-5 bg-light">
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <div class="text-center mb-5">
+                    <h1 class="display-5 fw-bold">Welcome to <span class="text-primary">M365Expert</span></h1>
+                    <h4 class="text-primary mb-4">Specialized Microsoft 365, Azure & AI Consulting – Practical, Affordable, Results-Driven</h4>
+                    <p class="lead mb-4">I help businesses maximize Microsoft tools with expert setup, automation, cloud migration, and hands-on AI training.</p>
+                </div>
+
+                <div class="row g-5">
+                    <!-- Left column – Intro text -->
+                    <div class="col-lg-6">
+                        <p class="mb-4">With deep experience in the Microsoft ecosystem, I deliver high-impact solutions without the big-agency price tag. Whether you need clean Outlook & SharePoint environments, efficient Power Automate workflows, secure SQL Server setups, on-prem/server management, Azure cloud strategy, or practical AI seminars (Copilot, AI Builder, Microsoft 365 AI features) — I’ve got you covered.</p>
+                        <p class="mb-5">Focus on what matters: I bring clarity, reduce complexity, and help your team actually use the tools you already pay for.</p>
+                        <div class="text-center text-lg-start">
+                            <a href="#" class="btn btn-primary py-3 px-5 rounded-pill">Schedule a Free Discovery Call</a>
                         </div>
                     </div>
-                    <div class="d-flex text-white mb-5">
-                        <div class="flex-shrink-0 d-flex align-items-center justify-content-center bg-white text-primary rounded-circle" style="width: 60px; height: 60px;">
-                            <i class="fas fa-cloud fs-4"></i>
+
+                    <!-- Right column – Key services/features (vertical cards) -->
+                    <div class="col-lg-6">
+                        <div class="bg-white shadow-sm rounded p-4 mb-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="flex-shrink-0 feature-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3">
+                                    <i class="fas fa-envelope fs-4"></i>
+                                </div>
+                                <h3 class="mb-0">Outlook 365 & SharePoint Mastery</h3>
+                            </div>
+                            <p>Modern mailbox management, shared mailboxes, permissions, modern SharePoint sites, document libraries, and Teams integration that actually works for your team.</p>
                         </div>
-                        <div class="ps-4">
-                            <h3>Cloud & DevOps</h3>
-                            <p class="mb-0">Migration, optimization and managed cloud services</p>
+
+                        <div class="bg-white shadow-sm rounded p-4 mb-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="flex-shrink-0 feature-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3">
+                                    <i class="fas fa-robot fs-4"></i>
+                                </div>
+                                <h3 class="mb-0">Power Automate & Workflow Automation</h3>
+                            </div>
+                            <p>Build smart approvals, notifications, data syncing, document flows, and business process automation — saving your team hours every week.</p>
                         </div>
-                    </div>
-                    <div class="d-flex text-white">
-                        <div class="flex-shrink-0 d-flex align-items-center justify-content-center bg-white text-primary rounded-circle" style="width: 60px; height: 60px;">
-                            <i class="fas fa-shield-halved fs-4"></i>
+
+                        <div class="bg-white shadow-sm rounded p-4 mb-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="flex-shrink-0 feature-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3">
+                                    <i class="fas fa-cloud fs-4"></i>
+                                </div>
+                                <h3 class="mb-0">Azure Cloud & SQL Server Setup</h3>
+                            </div>
+                            <p>Azure tenant setup, hybrid environments, SQL Server on-prem/cloud migration, performance tuning, security, and backup strategies.</p>
                         </div>
-                        <div class="ps-4">
-                            <h3>Cybersecurity</h3>
-                            <p class="mb-0">Threat protection, compliance & secure architecture</p>
+
+                        <div class="bg-white shadow-sm rounded p-4">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="flex-shrink-0 feature-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3">
+                                    <i class="fas fa-chalkboard-teacher fs-4"></i>
+                                </div>
+                                <h3 class="mb-0">AI Seminars & Workshops</h3>
+                            </div>
+                            <p>Practical Microsoft AI training: Copilot for Microsoft 365, AI Builder, Power Platform AI, responsible AI usage — tailored for your team.</p>
                         </div>
                     </div>
                 </div>
